'package.json' modified to add dependency 'express'

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/sayantanhore/Graph#readme",
   "dependencies": {
-      "clear": "0.0.1"
+      "clear": "0.0.1",
+      "express": "^4.13.4"
   },
   "devDependencies": {
     "clear": "0.0.1",
