--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "eslint *.js",
-    "lint": "eslint test.js"
+    "lint": "eslint test.js",
+    "build-js": "browserify src/scripts/main.js -o src/scripts/bundle.js"
   },
   "keywords": [
     "graph",
@@ -16,6 +17,8 @@
   "author": "Sayantan Hore",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^13.1.0",
+    "clear": "0.0.1",
     "eslint": "^3.1.1",
     "eslint-config-airbnb-base": "5.0.0",
     "eslint-plugin-import": "^1.12.0",
@@ -30,6 +33,8 @@
     "karma-safari-launcher": "^1.0.0"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "d3": "^4.2.1",
+    "express": "^4.14.0",
+    "jquery": "^3.1.0"
   }
 }
