--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Sayantan Hore",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
     "clear": "0.0.1",
@@ -31,6 +33,7 @@
     "gulp-util": "^3.0.7",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.2",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
@@ -41,6 +44,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "angular": "^1.5.8",
     "d3": "^4.2.1",
     "express": "^4.14.0",
     "jquery": "^3.1.0"
