--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.0",
     "d3": "^4.2.1",
     "express": "^4.14.0",
     "jquery": "^3.1.0"
